--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ footer {
 
 .jumbotron {
     padding: 30px;
-    background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
+    background-image: linear-gradient(to right,white, red);
     color: white;
     margin:0;
 }
@@ -32,7 +32,7 @@ footer {
     min-height: 200px;
 }
 .navbar {
-    background-color:#901CAD;
+    background-color:blue;
 }
 .site-footer {
     background-image: linear-gradient(#b7a8f8, white);
@@ -43,5 +43,10 @@ footer {
 }
 
 .carousel {
-    border: solid #5637DD;
+    border: solid red;
+}
+#carouselButton {
+    position: absolute;
+    right: 0;
+    bottom: 0;
 }
