--- a/css/styles.css
+++ b/css/styles.css
@@ -1,55 +1,44 @@
 body {
-    font-family: "Open Sans", sans-serif;
-}
+  font-family: "Open Sans", sans-serif; }
 
 h1, h2, h3 {
-    font-family: "Lobster", cursive;
-}
+  font-family: "Lobster", cursive; }
 
 h2 {
-    color: #3046C5;
-}
-
-header {
-    h2 {
-        color: $color-pale;
-    }
-}
+  color: #3046C5; }
 
 footer {
-    background-image: linear-gradient(#CEC8FF, white);
-    padding: 20px 0;
-}
+  background-image: linear-gradient(#CEC8FF, white);
+  padding: 20px 0; }
 
 .jumbotron {
-    padding: 30px;
-    background-image: linear-gradient(to right,white, red);
-    color: white;
-    margin:0;
-}
+  padding: 30px;
+  background-image: linear-gradient(to right, white, red);
+  color: white;
+  margin: 0; }
 
 .row-content {
-    padding: 50px 0;
-    border-bottom: 1px ridge;
-    min-height: 200px;
-}
+  padding: 50px 0;
+  border-bottom: 1px ridge;
+  min-height: 200px; }
+
 .navbar {
-    background-color:blue;
-}
+  background-color: blue; }
+
 .site-footer {
-    background-image: linear-gradient(#b7a8f8, white);
-    padding: 20px, 0px;
-}
+  background-image: linear-gradient(#b7a8f8, white);
+  padding: 20px, 0px; }
+
 .carousel-caption {
-    background-color: rgba(0, 0, 0, 0.5);
-}
+  background-color: rgba(0, 0, 0, 0.5); }
 
 .carousel {
-    border: solid red;
-}
+  border: solid red; }
 
 #carouselButton {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-}
+  position: absolute;
+  right: 0;
+  bottom: 0; }
+
+header h2 {
+  color: #CEC8FF; }
